<resources>
    <string name="app_name">Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_menuRestName">Restaurant Name</string>
    <string name="et_menuName">Enter Menu Name</string>
    <string name="et_menuDescription">Enter Menu Description</string>
    <string name="et_menuPrice">Enter Menu Price</string>
    <string name="btn_saveMenu">Save Menu</string>
    <string name="tv_restPage">Please enter restaurant details</string>
    <string name="et_restName">Restaurant Name</string>
    <string name="et_restAddress">Restaurant Address</string>
    <string name="btn_save">Save Restaurant</string>
    <string name="tv_adminPage">Welcome to Admin Page</string>
    <string name="tv_adminDetails">Admin Personal Details</string>
    <string name="tv_adminPersonalDetails">Phone: \n0894644545 \n\nEmail: \nadmin@gmail.com</string>
    <string name="tv_adminRestaurant">Restaurants Available</string>
    <string name="tv_adminRestaurantAv">0</string>
    <string name="tv_adminMenus">Menus Available</string>
    <string name="tv_adminMenusAv">0</string>
    <string name="tv_contactForm">Contact Us</string>
    <string name="tv_contactFormName">Name</string>
    <string name="tv_contactFormEmail">Email</string>
    <string name="tv_contactFormSubject">Subject</string>
    <string name="tv_contactFormMessage">Message</string>
    <string name="btn_contactFormSendMessage">Send Message</string>
    <string name="contact_form_post_message">Please wait! sending your message …</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="tv_logInUser">Login</string>
    <string name="et_logInUserEmailAddress">Email Address</string>
    <string name="et_logInUserPassword">Password</string>
    <string name="btn_logInUser">Log In</string>
    <string name="btn_logCancelUser">Cancel</string>
    <string name="tv_logInUserForgottenPass">Forgotten Password</string>
    <string name="btn_logSignUpUser">Register</string>
    <string name="tv_menuImageAdminRestName">Restaurant Name</string>
    <string name="tv_menuImageAdminMenusAv">List of Menus</string>
    <string name="btn_menuImageAdminNewMenu">New Menu</string>
    <string name="btn_menuImageAdminBackAdmin">Back Admin</string>
    <string name="tv_menuImageFullListAdmin">List of Menus</string>
    <string name="tv_menuImageUpdateMenuRestName">Restaurant Name</string>
    <string name="tv_menuImageUpdateMenuMenusAv">List of Menus</string>
    <string name="tv_menuImageCustomRestName">Restaurant Name</string>
    <string name="tv_menuImageCustomMenusAv">List of Menus</string>
    <string name="tv_registerUser">Register</string>
    <string name="et_regUserFirstName">First Name</string>
    <string name="et_regUserLastName">Last Name</string>
    <string name="et_regUserPhoneNumber">Phone Number</string>
    <string name="et_regUserEmailAddress">Email Address</string>
    <string name="et_regUserPassword">Password</string>
    <string name="et_regUserConfPassword">Confirm Password</string>
    <string name="btn_registerUser">Register</string>
    <string name="btn_regCancelUser">Cancel</string>
    <string name="btn_regLogUser">Log In</string>
    <string name="tv_resetPassword">Enter your registered Email.</string>
    <string name="et_resetPasswordEmail">Please enter your email</string>
    <string name="btn_resetPassword">Reset Password</string>
    <string name="tv_restImageAddMenus">List of Restaurants</string>
    <string name="tv_restImageShowMenus">List of Restaurants</string>
    <string name="tv_adminNumberMenus">Select the Restaurant</string>
    <string name="tv_restImageShowRestAdmin">List of Restaurants</string>
    <string name="btn_addNewRestaurant">Add Restaurant</string>
    <string name="btn_backAdminPage">Back Admin</string>
    <string name="tv_restImageUpdateMenus">List of Restaurants</string>
    <string name="tv_restImageUpdateRest">List of Restaurants</string>
    <string name="tv_restCustomShowMenu">List of Restaurants</string>
    <string name="btn_showMap">Show Map</string>
    <string name="tv_restCustomShowRest">List of Restaurants</string>
    <string name="tv_menuUpdate">Update Menu</string>
    <string name="et_menuNameUpdate">Menu Name</string>
    <string name="et_menuDescriptionUpdate">Menu Description</string>
    <string name="et_menuPriceUpdate">Menu Price</string>
    <string name="btn_menuSaveUpdate">Update Menu</string>
    <string name="btn_menuBackAdminUpdate">Back Admin</string>
    <string name="tv_restUpdateDetails">Update Restaurant Details</string>
    <string name="tv_restUpdateName">Restaurant Name</string>
    <string name="et_restUpdateName">Restaurant Name</string>
    <string name="tv_restUpdateAddress">Restaurant Address</string>
    <string name="et_restUpdateAddress">Restaurant Address</string>
    <string name="btn_restUpdateDetails">Update Restaurant</string>
    <string name="tv_userChangeEmailAuth">Authenticate User</string>
    <string name="et_userChangeEmailOldEmail">Old Email Address</string>
    <string name="et_userChangeEmailPass">Enter your Password</string>
    <string name="btn_userChangeEmailAuth">Authenticate User</string>
    <string name="et_userChangeEmailNewEmail">Enter your new Email Address</string>
    <string name="btn_userChangeEmail">Change Email</string>
    <string name="tv_userChangePassAuth">Authenticate User</string>
    <string name="et_userChangePassEmail">Email Address</string>
    <string name="et_userChangePassOldPass">Enter your old Password</string>
    <string name="btn_userChangePassAuth">Authenticate User</string>
    <string name="et_userChangePassNewPass">Enter your new Password</string>
    <string name="btn_userChangePassword">Change Password</string>
    <string name="tv_userEditProfile">Edit Profile</string>
    <string name="tv_userFirstName">First Name:</string>
    <string name="et_userFirstName">First Name</string>
    <string name="tv_userLastName">Last Name: </string>
    <string name="et_userLastName">Last Name</string>
    <string name="tv_userPhone">Phone: </string>
    <string name="et_userPhone">Phone</string>
    <string name="tv_userEmailAddress">Email: </string>
    <string name="et_userEmailAddress">Email: </string>
    <string name="btn_userEditProfile">Update Profile</string>
    <string name="tv_userHeader">User Name</string>
    <string name="tv_userWelcome">Welcome</string>
    <string name="tv_userService">Select a service:</string>
    <string name="tv_userRests">Restaurants Available</string>
    <string name="tv_userRestsAv">0</string>
    <string name="open_userPage">Open</string>
    <string name="close_userPage">Close</string>
    <string name="tv_mainPage">Welcome to Restaurant!</string>
    <string name="btn_mainAdmin">Log In</string>
    <string name="btn_mainDeals">Deals</string>
    <string name="btn_mainCustomer">Register</string>
    <string name="btn_mainContactUs">Contact Us</string>
    <string name="tv_drawerMenuAdmin">Admin Page\n\nEmail:\nadmin@gmail.com</string>
    <string name="tv_nameMenu">Name</string>
    <string name="tv_descriptionMenu">Description</string>
    <string name="tv_ratingMenu">4.7</string>
    <string name="tv_priceMenu">Price</string>
    <string name="tv_restNameFull">Restaurant:</string>
    <string name="tv_nameMenuFull">Name</string>
    <string name="tv_descriptionMenuFull">Description</string>
    <string name="tv_ratingMenuFull">4.7</string>
    <string name="tv_priceMenuFull">Price</string>
    <string name="tv_restDetailsAdmin">Restaurant Details:</string>
    <string name="tv_restNameAdmin">Name:</string>
    <string name="tv_restAddress">Address:</string>
    <string name="tv_menusAvailable">Menus Av:</string>
    <string name="tv_numberMenusAvailable">0</string>
    <string name="menu_adminLogOut">Log Out</string>
    <string name="open_adminPage">Open</string>
    <string name="close_adminPage">Close</string>
    <string name="menuDAdmin_restOptions">Restaurant Options:</string>
    <string name="menuDAdmin_addRestaurant">Add Restaurants</string>
    <string name="menuDAdmin_showRestaurant">Show Restaurants</string>
    <string name="menuDAdmin_updateRestaurant">Update Restaurant</string>
    <string name="menuDAdmin_addMenus">Add Menus</string>
    <string name="menuDAdmin_menuOptions">Menu Options:</string>
    <string name="menuDAdmin_showMenus">Show Menus</string>
    <string name="menuDAdmin_showMenusFullList">List of all Menus</string>
    <string name="menuDAdmin_updateMenu">Update Menu</string>
    <string name="mDUser_addPicture">Add User Picture</string>
    <string name="mDUser_editProfile">Edit User Profile</string>
    <string name="mDUser_changeEmail">Change User Email</string>
    <string name="mDUser_changePassword">Change User Password</string>
    <string name="mImgAdmin_goBack">Go Back Admin</string>
    <string name="mImgAdmin_addMenu">Add New Menu</string>
    <string name="mImgAdmin_Close">Close</string>
    <string name="mImgAdminFullList_goBack">Go Back Admin</string>
    <string name="mImgAdminFullList_addMenu">Add New Menu</string>
    <string name="mImgAdminFullList_Close">Close</string>
    <string name="mRestImgAdminShowMenu_goBack">Go Back Admin</string>
    <string name="mRestImgAdminShowMenu_addMenu">Add New Menu</string>
    <string name="mRestImgAdminShowMenu_Close">Close</string>
    <string name="mRestImgAdminShowRest_goBack">Go Back Admin</string>
    <string name="mRestImgAdminShowRest_addMenu">Add Restaurant</string>
    <string name="mRestImgAdminShowRest_Close">Close</string>
    <string name="menuUserChangePass_goBack">Go Back</string>
    <string name="menuUserChangeEmail_goBack">Go Back</string>
    <string name="menuUserEditProfile_goBack">Go Back</string>
    <string name="menuUser_logOut">Log Out</string>
    <string name="menuUser_editProfile">Edit Profile</string>
    <string name="menuUser_changeEmail">Change Email</string>
    <string name="menuUser_changePassword">Change Password</string>
    <string name="menuUser_close">Close</string>
</resources>