<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/userLogOut"
        android:orderInCategory="100"
        android:title="@string/menuUser_logOut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/userEditProfile"
        android:orderInCategory="100"
        android:title="@string/menuUser_editProfile"
        app:showAsAction="never" />

    <item
        android:id="@+id/userChangeEmail"
        android:orderInCategory="100"
        android:title="@string/menuUser_changeEmail"
        app:showAsAction="never" />

    <item
        android:id="@+id/userChangePassword"
        android:orderInCategory="100"
        android:title="@string/menuUser_changePassword"
        app:showAsAction="never" />

</menu>


