<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".LoginUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLogInUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tv_logInUser"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailLogUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/et_round_corners"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/et_logInUserEmailAddress"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassLogUser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/et_round_corners"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/et_logInUserPassword"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="20sp"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogInUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round_left"
                android:text="@string/btn_logInUser"
                android:textColor="@color/colorBlack"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCancelLogUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round_right"
                android:text="@string/btn_logCancelUser"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tv_logInUserForgottenPass"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegLogUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_round_corners"
            android:text="@string/btn_logSignUpUser"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>