<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvContactForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/tv_contactForm"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/tv_contactFormName"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/myName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:textSize="22sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/tv_contactFormEmail"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/myEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/tv_contactFormSubject"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/mySubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="text|textCapSentences"
            android:textColorHint="#000000"
            android:textSize="22sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/tv_contactFormMessage"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/myMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:height="180dp"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="22sp"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_contactFormSendMessage"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>