<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".UpdateMenuOld">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMenuUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_menuUpdate"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imgViewMenuUpdate"
            android:layout_width="280dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:src="@drawable/add_menus_picture"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMenuNameUpdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/et_round_corners"
                android:hint="@string/et_menuNameUpdate"
                android:inputType="textPersonName|textCapWords"
                android:paddingStart="10dp"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMenuDescriptionUpdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/et_round_corners"
                android:hint="@string/et_menuDescriptionUpdate"
                android:inputType="text|textCapWords"
                android:paddingStart="10dp"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMenuPriceUpdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/et_round_corners"
                android:hint="@string/et_menuPriceUpdate"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSaveMenuUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round_left"
                android:text="@string/btn_menuSaveUpdate"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnBacMenuUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round_right"
                android:text="@string/btn_menuBackAdminUpdate"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>